Make cert transparency histogram work with the NetworkService.

In particular, move Net.CertificateTransparency.MainFrameValidSCTCount
from ResourceDispatcherHost to NavigationURLLoaderImpl.

Bug: 859364
Change-Id: I2258fc36af30b64b76eb7c5bc2c1f9851bb0f1be
Reviewed-on: https://chromium-review.googlesource.com/1168093
Commit-Queue: Matt Menke <mmenke@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Reviewed-by: Ryan Sleevi <rsleevi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582349}
Former-commit-id: d9cad56fca85981a14b10d32acd4e7039d0d368d